--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
-
+    <h1> This is a cool feature </h1>
+    <h2> I do understand what is going on. </h2>
   </body>
 </html>
